objects/ltcomm__Learning_Order_Item__c.object
<CustomObject>
    <fields>
        <fullName>ltcomm__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ltcomm__Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Learning_Order_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ltcomm__Assignment_Error__c</fullName>
        <label>Assignment Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ltcomm__Assignment_Status__c</fullName>
        <label>Assignment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Assignment</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Assignment Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ltcomm__Coupon__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coupon</label>
        <referenceTo>ltcomm__Coupon__c</referenceTo>
        <relationshipLabel>Learning Order Items</relationshipLabel>
        <relationshipName>Learning_Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ltcomm__Date_and_Time__c</fullName>
        <label>Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ltcomm__Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ltcomm__Learning_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Assignment</label>
        <referenceTo>redwing__Learning_Assignment__c</referenceTo>
        <relationshipLabel>Learning Order Items</relationshipLabel>
        <relationshipName>Learning_Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ltcomm__Learning_Order__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Learning Order</label>
        <referenceTo>ltcomm__Learning_Order__c</referenceTo>
        <relationshipLabel>Learning Order Item</relationshipLabel>
        <relationshipName>Learning_Order_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ltcomm__Learning_Plan_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Plan Assignment</label>
        <referenceTo>redwing__Training_Plan_Assignment__c</referenceTo>
        <relationshipLabel>Learning Order Items</relationshipLabel>
        <relationshipName>Learning_Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ltcomm__Learning_Trac_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Trac Assignment</label>
        <referenceTo>redwing__Training_Track_Assignment__c</referenceTo>
        <relationshipLabel>Learning Order Items</relationshipLabel>
        <relationshipName>Learning_Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ltcomm__ObjectId__c</fullName>
        <label>Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ltcomm__Purchased_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchased By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Learning_Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ltcomm__Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status</label>
        <type>Checkbox</type>
    </fields>
    <label>Learning Order Item</label>
    <listViews>
        <fullName>ltcomm__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LRDRI-{000000}</displayFormat>
        <label>Learning Order Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Order Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>